--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jose": "^6.0.11",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
